--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -552,9 +552,9 @@
     <string name="time_range_title" msgid="5777596779865648336">"ヘルスコネクトから削除するデータの選択"</string>
     <string name="time_range_next_button" msgid="5849096934896557888">"次へ"</string>
     <string name="time_range_message_all" msgid="7280888587242744729">"指定した期間にヘルスコネクトに追加されたすべてのデータを完全に削除します"</string>
-    <string name="time_range_message_data_type" msgid="1896125004829258195">"指定した期間にヘルスコネクトに追加された<xliff:g id="DATA_TYPE">%s</xliff:g>のデータを完全に削除します"</string>
-    <string name="time_range_message_category" msgid="1136451418397326356">"指定した期間にヘルスコネクトに追加された<xliff:g id="CATEGORY">%s</xliff:g>のデータを完全に削除します"</string>
-    <string name="time_range_message_app_data" msgid="2590800457710603556">"指定した期間にヘルスコネクトに追加された<xliff:g id="APP_DATA">%s</xliff:g>のデータを完全に削除します"</string>
+    <string name="time_range_message_data_type" msgid="1896125004829258195">"指定した期間にヘルスコネクトに追加された <xliff:g id="DATA_TYPE">%s</xliff:g> のデータを完全に削除します"</string>
+    <string name="time_range_message_category" msgid="1136451418397326356">"指定した期間にヘルスコネクトに追加された <xliff:g id="CATEGORY">%s</xliff:g> のデータを完全に削除します"</string>
+    <string name="time_range_message_app_data" msgid="2590800457710603556">"指定した期間にヘルスコネクトに追加された <xliff:g id="APP_DATA">%s</xliff:g> のデータを完全に削除します"</string>
     <string name="time_range_message_permission_type_app_data" msgid="1613568925588480588">"指定した期間に <xliff:g id="APP_DATA">%2$s</xliff:g> がヘルスコネクトに追加した<xliff:g id="DATA_TYPE">%1$s</xliff:g>のデータを完全に削除します"</string>
     <string name="time_range_one_day" msgid="7162709826595446727">"過去 24 時間分を削除"</string>
     <string name="time_range_one_week" msgid="8754523384275645434">"過去 7 日分を削除"</string>
@@ -980,7 +980,7 @@
     <string name="playstore_app_title" msgid="4138464328693481809">"Play ストア"</string>
     <string name="auto_delete_button" msgid="8536451792268513619">"自動削除"</string>
     <string name="auto_delete_title" msgid="8761742828224207826">"自動削除"</string>
-    <string name="auto_delete_header" msgid="4258649705159293715">"指定した時間が過ぎたらデータを削除するよう設定することで、ヘルスコネクトでの保存時間を管理できます"</string>
+    <string name="auto_delete_header" msgid="4258649705159293715">"指定した期間の経過後にデータを削除するように設定して、ヘルスコネクトでの保存時間を管理できます"</string>
     <string name="auto_delete_learn_more" msgid="7416469042791307994">"自動削除の詳細"</string>
     <string name="auto_delete_section" msgid="7732381000331475082">"データの自動削除"</string>
     <string name="range_after_x_months" msgid="3340127072680117121">"{count,plural, =1{# か月後}other{# か月後}}"</string>
@@ -994,7 +994,7 @@
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{保存期間が # か月を超えるすべてのデータがヘルスコネクトから削除されます。接続されているアプリにこれらの変更が反映されるまで 1 日ほどかかることがあります。}other{保存期間が # か月を超えるすべてのデータがヘルスコネクトから削除されます。接続されているアプリにこれらの変更が反映されるまで 1 日ほどかかることがあります。}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"アプリから削除されるデータ"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"完了"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{自動削除を ON にしました。# か月を過ぎたデータは削除されます}other{自動削除を ON にしました。# か月を過ぎたデータは削除されます}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{自動削除を ON にしました。# か月を過ぎたデータは削除されます。}other{自動削除を ON にしました。# か月を過ぎたデータは削除されます。}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"自動削除は OFF です"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"アプリの優先順位を設定する"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"<xliff:g id="DATA_TYPE">%s</xliff:g>のデータを追加するアプリが複数ある場合、ヘルスコネクトはこのリストの一番上にあるアプリを優先します。順序を変更するには、アプリをドラッグしてください。"</string>
@@ -1133,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"アプリストアで表示する"</string>
     <string name="select_all" msgid="837499881590001166">"すべて選択"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"接続されているアプリは、ヘルスコネクトに追加されたこのデータを読み取れなくなります"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"ON"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"OFF"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"エクササイズのマップルートを確認できます"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"翌日"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"来週"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"翌月"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"前日"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"前週"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"前月"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"すべてのデータを完全に削除しますか？"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"選択したデータを完全に削除しますか？"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"<xliff:g id="APP_NAME">%s</xliff:g>のすべてのデータを完全に削除しますか？"</string>
@@ -1175,4 +1166,11 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g>にアクセス"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"昨日の <xliff:g id="TIME_DATE">%1$s</xliff:g> にアクセス"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g> にアクセス"</string>
+    <string name="request_permissions_allow_all_the_time" msgid="4081502779872893569">"常に許可"</string>
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"選択された権限を許可する"</string>
+    <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"アプリの使用時のみ"</string>
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"すべて拒否する"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"フィットネスとウェルネスに関するデータへのアクセスを <xliff:g id="APP_NAME">%1$s</xliff:g> に許可しますか？"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> が<xliff:g id="DATA_TYPES">%2$s</xliff:g>へのアクセスをリクエストしています。\n\nすべて許可するか、個別に許可するかを選択してください。"</string>
+    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> に<xliff:g id="DATA_TYPE">%2$s</xliff:g>へのアクセスを許可しますか？"</string>
 </resources>
