--- a/apk/res/values-bs/strings.xml
+++ b/apk/res/values-bs/strings.xml
@@ -1059,7 +1059,7 @@
     <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Potrebno je više prostora"</string>
     <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect treba <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> prostora za pohranu na telefonu da nastavi s integracijom."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integracija je pauzirana"</string>
-    <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikacija Health Connect se zatvorila tokom integracije s Android sistemom.\n\nKliknite na Nastavi da ponovo otvorite aplikaciju i nastavite s prijenosom podataka i odobrenja."</string>
+    <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikacija Health Connect se zatvorila tokom integracije s Android sistemom.\n\nKliknite na Nastavi da ponovo otvorite aplikaciju i nastavite s prenosom podataka i odobrenja."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Da sačuvate podatke Health Connecta, izvršite ovo u roku od <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_button" msgid="2255148549862208047">"Nastavi"</string>
     <string name="migration_paused_notification_title" msgid="4368414714202113077">"Integracija je pauzirana"</string>
@@ -1133,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Pogledajte u trgovini aplikacija"</string>
     <string name="select_all" msgid="837499881590001166">"Odaberi sve"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Povezane aplikacije više neće moći čitati ove podatke iz Health Connecta"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"Označeno"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"Nije označeno"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"Dostupno je vježbanje rute na mapi"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"Sljedeći dan"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"Sljedeća sedmica"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"Sljedeći mjesec"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"Prethodni dan"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"Prethodna sedmica"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"Prethodni mjesec"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Trajno izbrisati sve podatke?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Trajno izbrisati odabrane podatke?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Trajno izbrisati sve podatke aplikacije <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
@@ -1175,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Pristupljeno je u <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Pristupljeno je jučer u <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Pristupljeno je <xliff:g id="TIME_DATE_0">%1$s</xliff:g> u <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"Dopusti odabrano"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Odbij sve"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Želite li dopustiti aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> da pristupa podacima o fitnessu i općem stanju?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> zahtijeva pristup ovim podacima: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nOdaberite želite li dopustiti sve ili upravljati njima pojedinačno."</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
