--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"ចំនួនរុញរទេះរុញ"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"អានចំនួនរុញរទេះរុញ"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"សរសេរចំនួនរុញរទេះរុញ"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"កម្រិតសកម្មភាព"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"កម្រិតសកម្មភាព"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"អានកម្រិតសកម្មភាព"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"សរសេរកម្រិតសកម្មភាព"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"អត្រាមេតាបូលីសគោល"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"អត្រាមេតាបូលីសគោល"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"អាន​អត្រាមេតាបូលីសគោល"</string>
@@ -1137,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"មើលនៅលើហាង​កម្មវិធី"</string>
     <string name="select_all" msgid="837499881590001166">"ជ្រើស​រើសទាំង​អស់"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"កម្មវិធីដែលបានភ្ជាប់នឹងមិនអាចអានទិន្នន័យនេះពី Health Connect បានទៀតទេ"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"បាន​ធីក"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"មិន​បាន​ធីក"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"មានផ្លូវលើផែនទីសម្រាប់ហាត់ប្រាណ"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"ថ្ងៃ​បន្ទាប់"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"សប្ដាហ៍​ក្រោយ"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"ខែបន្ទាប់"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"ថ្ងៃ​មុន"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"សប្ដាហ៍​មុន​"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"ខែមុន"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"លុបទិន្នន័យទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"លុបទិន្នន័យបានជ្រើសរើសទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"លុបទិន្នន័យ <xliff:g id="APP_NAME">%s</xliff:g> ទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
@@ -1179,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"បានចូលប្រើនៅម៉ោង <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"បានចូលប្រើម្សិលមិញនៅម៉ោង <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"បានចូលប្រើនៅថ្ងៃទី <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"អនុញ្ញាតតាមការរើស"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"បដិសេធ​ទាំងអស់"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាពឬ?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> កំពុងស្នើសុំសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPES">%2$s</xliff:g>។\n\nសូមជ្រើសរើសអនុញ្ញាតទាំងអស់ ឬគ្រប់គ្រងការអនុញ្ញាតដាច់ដោយឡែកពីគ្នា។"</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
