--- a/apk/res/values-pa/strings.xml
+++ b/apk/res/values-pa/strings.xml
@@ -1133,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ਐਪ ਸਟੋਰ \'ਤੇ ਦੇਖੋ"</string>
     <string name="select_all" msgid="837499881590001166">"ਸਭ ਚੁਣੋ"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"ਕਨੈਕਟ ਕੀਤੀਆਂ ਐਪਾਂ ਹੁਣ Health Connect ਦੇ ਇਸ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਨਹੀਂ ਕਰ ਸਕਣਗੀਆਂ"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"ਨਿਸ਼ਾਨ ਲਗਾਇਆ"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"ਸਹੀ ਦਾ ਨਿਸ਼ਾਨ ਨਹੀਂ ਲਾਇਆ ਗਿਆ"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"ਕਸਰਤ ਲਈ ਨਕਸ਼ੇ ਦਾ ਰਸਤਾ ਉਪਲਬਧ ਹੈ"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"ਅਗਲਾ ਦਿਨ"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"ਅਗਲਾ ਹਫ਼ਤਾ"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"ਅਗਲਾ ਮਹੀਨਾ"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"ਪਿਛਲਾ ਦਿਨ"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"ਪਿਛਲਾ ਹਫ਼ਤਾ"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"ਪਿਛਲਾ ਮਹੀਨਾ"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"ਕੀ ਸਾਰਾ ਡਾਟਾ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"ਕੀ ਚੁਣਿਆ ਗਿਆ ਡਾਟਾ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"ਕੀ <xliff:g id="APP_NAME">%s</xliff:g> ਦਾ ਸਾਰਾ ਡਾਟਾ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
@@ -1175,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g> ਵਜੇ ਪਹੁੰਚ ਕੀਤੀ ਗਈ"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"<xliff:g id="TIME_DATE">%1$s</xliff:g> ਵਜੇ ਕੱਲ੍ਹ ਪਹੁੰਚ ਕੀਤੀ ਗਈ"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> ਨੂੰ <xliff:g id="TIME_DATE_1">%2$s</xliff:g> ਵਜੇ ਪਹੁੰਚ ਕੀਤੀ ਗਈ"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"ਚੁਣੀ ਐਪ ਨੂੰ ਆਗਿਆ ਦਿਓ"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"ਸਭ ਨੂੰ ਅਸਵੀਕਾਰ ਕਰੋ"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"ਕੀ <xliff:g id="APP_NAME">%1$s</xliff:g> ਨੂੰ ਫਿਟਨੈੱਸ ਤੇ ਤੰਦਰੁਸਤੀ ਸੰਬੰਧੀ ਡਾਟੇ ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਦੀ ਆਗਿਆ ਦੇਣੀ ਹੈ?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਐਪ <xliff:g id="DATA_TYPES">%2$s</xliff:g> ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਦੀ ਬੇਨਤੀ ਕਰ ਰਹੀ ਹੈ।\n\nਸਭ ਦੀ ਆਗਿਆ ਦੇਣ ਜਾਂ ਉਨ੍ਹਾਂ ਨੂੰ ਵਿਅਕਤੀਗਤ ਤੌਰ \'ਤੇ ਕੰਟਰੋਲ ਕਰਨ ਬਾਰੇ ਚੁਣੋ।"</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
