--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -1133,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Vezi în magazinul de aplicații"</string>
     <string name="select_all" msgid="837499881590001166">"Selectează tot"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Aplicațiile conectate nu vor mai putea să acceseze aceste date din Health Connect"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"Bifată"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"Nebifată"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"Este disponibilă harta traseului pentru exerciții"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"Ziua următoare"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"Săptămâna viitoare"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"Luna viitoare"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"Ziua anterioară"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"Săptămâna trecută"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"Luna trecută"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Ștergi definitiv toate datele?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Ștergi definitiv datele selectate?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Ștergi definitiv toate datele <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
@@ -1175,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Data ultimei accesări: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Data accesării: ieri, <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Data accesării: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"Permite selecțiile"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Refuză-le pe toate"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Permiți accesul <xliff:g id="APP_NAME">%1$s</xliff:g> la datele despre fitness și wellness?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicită acces la <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nAlege să acorzi toate permisiunile sau să le gestionezi individual."</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
