--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"வீல்ச்சேர் புஷ்கள்"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"வீல்ச்சேர் புஷ்கள் தொடர்பான தரவை வாசிக்கும்"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"வீல்ச்சேர் புஷ்கள் தொடர்பான தரவை எழுதும்"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"செயல்பாட்டின் தீவிரத்தன்மை"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"செயல்பாட்டின் தீவிரத்தன்மை"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"செயல்பாட்டின் தீவிரத்தன்மையைப் பார்க்கலாம்"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"செயல்பாட்டின் தீவிரத்தன்மையை எழுதலாம்"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"இயல்பான வளர்சிதைமாற்ற வீதம்"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"இயல்பான வளர்சிதைமாற்ற வீதம்"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"இயல்பான வளர்சிதைமாற்ற வீதம் தொடர்பான தரவை வாசிக்கும்"</string>
@@ -1137,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ஆப்ஸ்டோரில் பாருங்கள்"</string>
     <string name="select_all" msgid="837499881590001166">"அனைத்தையும் தேர்ந்தெடு"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Health Connectடில் உள்ள இந்தத் தரவை இணைக்கப்பட்ட ஆப்ஸால் இனி படிக்க முடியாது"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"தேர்வுசெய்யப்பட்டது"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"தேர்வுசெய்யப்படவில்லை"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"உடற்பயிற்சிக்கான வரைப்படப் பாதை கிடைக்கிறது"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"அடுத்த நாள்"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"அடுத்த வாரம்"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"அடுத்த மாதம்"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"முந்தைய நாள்"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"முந்தைய வாரம்"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"முந்தைய மாதம்"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"அனைத்துத் தரவையும் நிரந்தரமாக நீக்கவா?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"தேர்ந்தெடுக்கப்பட்ட தரவை நிரந்தரமாக நீக்கவா?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"அனைத்து <xliff:g id="APP_NAME">%s</xliff:g> தரவையும் நிரந்தரமாக நீக்கவா?"</string>
@@ -1179,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"அணுகிய நேரம்: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"நேற்று அணுகிய நேரம்: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"அணுகிய நேரம்: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"தேர்வான ஆப்ஸை அனுமதி"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"அனைத்தையும் நிராகரி"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"உடற்பயிற்சி மற்றும் ஆரோக்கியம் குறித்த தரவை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="DATA_TYPES">%2$s</xliff:g>க்கான அணுகல் <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸுக்குத் தேவை.\n\nஅனைத்தையும் அனுமதிக்கவோ அவற்றைத் தனித்தனியே கட்டுப்படுத்தவோ தேர்வுசெய்யுங்கள்."</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
