--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"tekerlekli sandalye şınavları"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"Tekerlekli sandalye şınavlarını oku"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"Tekerlekli sandalye şınavlarını yaz"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"Aktivite yoğunluğu"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"aktivite yoğunluğu"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"Aktivite yoğunluğunu okur"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"Aktivite yoğunluğunu yazar"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Bazal metabolizma hızı"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"bazal metabolizma hızı"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Bazal metabolizma hızını oku"</string>
@@ -1137,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Uygulama mağazasında göster"</string>
     <string name="select_all" msgid="837499881590001166">"Tümünü seç"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Bağlı uygulamalar Health Connect\'teki bu verileri artık okuyamayacak"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"İşaretli"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"İşaretlenmedi"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"Egzersiz rota haritası mevcut"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"Sonraki gün"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"Sonraki hafta"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"Sonraki ay"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"Önceki gün"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"Önceki hafta"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"Önceki ay"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Tüm verilerini kalıcı olarak silin"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Seçili veriler kalıcı olarak silinsin mi?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Tüm <xliff:g id="APP_NAME">%s</xliff:g> verileri kalıcı olarak silinsin mi?"</string>
@@ -1179,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Erişim zamanı: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Dün saat <xliff:g id="TIME_DATE">%1$s</xliff:g> itibarıyla erişildi"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Erişim tarihi: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"Seçilenlere izin ver"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Tümünü reddet"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının fitness ve sağlıklı yaşam verilerine erişmesine izin verilsin mi?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_TYPES">%2$s</xliff:g> verilerine erişmek istiyor.\n\nTümüne izin vermeyi veya ayrı ayrı kontrol etmeyi seçebilirsiniz."</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
