--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -196,14 +196,10 @@
     <string name="wheelchair_pushes_lowercase_label" msgid="8919337990806379687">"وہیل چیئر پش سے متعلق ڈیٹا"</string>
     <string name="wheelchair_pushes_read_content_description" msgid="157304610943976471">"وہیل چیئر پش سے متعلق ڈیٹا پڑھیں"</string>
     <string name="wheelchair_pushes_write_content_description" msgid="2745600707106818641">"وہیل چیئر پش سے متعلق ڈیٹا لکھیں"</string>
-    <!-- no translation found for activity_intensity_uppercase_label (8718366426053335611) -->
-    <skip />
-    <!-- no translation found for activity_intensity_lowercase_label (4260366013498161858) -->
-    <skip />
-    <!-- no translation found for activity_intensity_read_content_description (5503681098610026279) -->
-    <skip />
-    <!-- no translation found for activity_intensity_write_content_description (4843212785611055496) -->
-    <skip />
+    <string name="activity_intensity_uppercase_label" msgid="8718366426053335611">"سرگرمی کی شدت"</string>
+    <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"سرگرمی کی شدت"</string>
+    <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"سرگرمی کی شدت پڑھیں"</string>
+    <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"سرگرمی کی شدت لکھیں"</string>
     <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"بنیادی میٹابولک شرح سے متعلق ڈیٹا"</string>
     <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"بنیادی میٹابولک شرح سے متعلق ڈیٹا"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"بنیادی میٹابولک شرح سے متعلق ڈیٹا پڑھیں"</string>
@@ -1137,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"‫App اسٹور پر دیکھیں"</string>
     <string name="select_all" msgid="837499881590001166">"سبھی کو منتخب کریں"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"منسلک ایپس Health Connect سے اس ڈیٹا کو مزید نہیں پڑھ سکیں گی"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"نشان زد کر دیا گیا"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"نشان زد نہیں ہے"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"ورزش سے متعلق نقشے کا راستہ دستیاب ہے"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"اگلا دن"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"اگلا ہفتہ"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"اگلا مہینہ"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"پچھلا دن"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"پچھلا ہفتہ"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"پچھلا مہینہ"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"تمام ڈیٹا مستقل طور پر حذف کریں؟"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"منتخب ڈیٹا مستقل طور پر حذف کریں؟"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"<xliff:g id="APP_NAME">%s</xliff:g> کا تمام ڈیٹا مستقل طور پر حذف کریں؟"</string>
@@ -1179,4 +1166,14 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g> پر رسائی حاصل کی گئی"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"گزشتہ کل <xliff:g id="TIME_DATE">%1$s</xliff:g> پر رسائی حاصل کی گئی"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g> پر رسائی حاصل کی گئی"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"منتخب کردہ کو اجازت دیں"</string>
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"سبھی مسترد کریں"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> کو تندرستی اور فلاح و بہبود کے ڈیٹا تک رسائی کی اجازت دیں؟"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> تک رسائی کی درخواست کر رہا ہے۔\n\nسبھی کو اجازت دینے کا انتخاب کریں یا انہیں انفرادی طور پر کنٹرول کریں۔"</string>
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
