--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -989,13 +989,13 @@
     <string name="auto_delete_rationale" msgid="5255442126521464878">"Khi bạn thay đổi những chế độ cài đặt này, Health Connect sẽ xoá dữ liệu hiện có dựa trên các lựa chọn ưu tiên mới của bạn"</string>
     <string name="confirming_question_x_months" msgid="8204363800605282103">"{count,plural, =1{Tự động xoá dữ liệu sau # tháng?}other{Tự động xoá dữ liệu sau # tháng?}}"</string>
     <string name="confirming_message_x_months" msgid="986840333220382321">"{count,plural, =1{Thao tác này cũng xoá dữ liệu đã lưu hơn # tháng khỏi Health Connect.\n\nNếu bạn muốn xoá hoàn toàn dữ liệu khỏi các ứng dụng đã kết nối, hãy kiểm tra từng ứng dụng có thể đã lưu dữ liệu của bạn.}other{Thao tác này cũng xoá dữ liệu đã lưu hơn # tháng khỏi Health Connect.\n\nNếu bạn muốn xoá hoàn toàn dữ liệu khỏi các ứng dụng đã kết nối, hãy kiểm tra từng ứng dụng có thể đã lưu dữ liệu của bạn.}}"</string>
-    <string name="set_auto_delete_button" msgid="268450418318199197">"Thiết lập tính năng xoá tự động"</string>
+    <string name="set_auto_delete_button" msgid="268450418318199197">"Thiết lập tính năng tự động xoá"</string>
     <string name="deletion_started_title" msgid="1177766097121885025">"Dữ liệu hiện tại sẽ bị xoá"</string>
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{Health Connect sẽ xoá mọi dữ liệu đã lưu hơn # tháng. Có thể mất một ngày để những thay đổi này xuất hiện trong các ứng dụng mà bạn đã kết nối.}other{Health Connect sẽ xoá mọi dữ liệu đã lưu hơn # tháng. Có thể mất một ngày để những thay đổi này xuất hiện trong các ứng dụng mà bạn đã kết nối.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"Dữ liệu sẽ bị xoá khỏi các danh mục sau"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"Xong"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Tính năng Xoá tự động ở trạng thái bật. Dữ liệu đã lưu hơn # tháng sẽ bị xoá}other{Tính năng Xoá tự động ở trạng thái bật. Dữ liệu đã lưu hơn # tháng sẽ bị xoá}}"</string>
-    <string name="auto_delete_off_toast" msgid="6530926709108821768">"Tính năng Xoá tự động ở trạng thái tắt"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Tính năng Tự động xoá ở trạng thái bật. Dữ liệu đã lưu hơn # tháng sẽ bị xoá}other{Tính năng Tự động xoá ở trạng thái bật. Dữ liệu đã lưu hơn # tháng sẽ bị xoá}}"</string>
+    <string name="auto_delete_off_toast" msgid="6530926709108821768">"Tính năng Tự động xoá ở trạng thái tắt"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"Đặt thứ tự ưu tiên của ứng dụng"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"Nếu nhiều ứng dụng thêm dữ liệu <xliff:g id="DATA_TYPE">%s</xliff:g>, Health Connect sẽ ưu tiên ứng dụng ở vị trí cao nhất trong danh sách này. Bạn có thể kéo các ứng dụng để sắp xếp lại chúng."</string>
     <string name="priority_dialog_positive_button" msgid="2503570694373675092">"Lưu"</string>
@@ -1133,24 +1133,15 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Xem trên cửa hàng ứng dụng"</string>
     <string name="select_all" msgid="837499881590001166">"Chọn tất cả"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Các ứng dụng đã kết nối sẽ không thể đọc dữ liệu này từ Health Connect nữa"</string>
-    <!-- no translation found for a11y_checked (3685413382346589880) -->
-    <skip />
-    <!-- no translation found for a11y_unchecked (6258943223981886207) -->
-    <skip />
-    <!-- no translation found for a11y_map_description (4992907698581164434) -->
-    <skip />
-    <!-- no translation found for a11y_next_day (7298174378837366410) -->
-    <skip />
-    <!-- no translation found for a11y_next_week (6692230156318350735) -->
-    <skip />
-    <!-- no translation found for a11y_next_month (4462534553687997396) -->
-    <skip />
-    <!-- no translation found for a11y_previous_day (2529677154858456085) -->
-    <skip />
-    <!-- no translation found for a11y_previous_week (2992971531628685405) -->
-    <skip />
-    <!-- no translation found for a11y_previous_month (3304373968190750755) -->
-    <skip />
+    <string name="a11y_checked" msgid="3685413382346589880">"Đã đánh dấu"</string>
+    <string name="a11y_unchecked" msgid="6258943223981886207">"Chưa chọn"</string>
+    <string name="a11y_map_description" msgid="4992907698581164434">"Có tuyến đường tập thể dục trên bản đồ"</string>
+    <string name="a11y_next_day" msgid="7298174378837366410">"Ngày tiếp theo"</string>
+    <string name="a11y_next_week" msgid="6692230156318350735">"Tuần tiếp theo"</string>
+    <string name="a11y_next_month" msgid="4462534553687997396">"Tháng tiếp theo"</string>
+    <string name="a11y_previous_day" msgid="2529677154858456085">"Ngày trước"</string>
+    <string name="a11y_previous_week" msgid="2992971531628685405">"Tuần trước"</string>
+    <string name="a11y_previous_month" msgid="3304373968190750755">"Tháng trước"</string>
     <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Xoá vĩnh viễn toàn bộ dữ liệu?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Xoá vĩnh viễn dữ liệu đã chọn?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Xoá vĩnh viễn toàn bộ dữ liệu trên <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
@@ -1175,4 +1166,18 @@
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Truy cập lúc <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Truy cập hôm qua lúc <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Truy cập lúc <xliff:g id="TIME_DATE_1">%2$s</xliff:g> ngày <xliff:g id="TIME_DATE_0">%1$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_allow_all_the_time (4081502779872893569) -->
+    <skip />
+    <!-- no translation found for request_permissions_allow_selected (218527615680495438) -->
+    <skip />
+    <!-- no translation found for request_permissions_while_using_the_app (5155929974398889727) -->
+    <skip />
+    <!-- no translation found for request_permissions_deny_all (4123735770293545320) -->
+    <skip />
+    <!-- no translation found for wear_allow_app_access_fitness_and_wellness_data (7914569541993476826) -->
+    <skip />
+    <!-- no translation found for wear_request_multiple_data_type_permissions (5348997693739610876) -->
+    <skip />
+    <!-- no translation found for wear_request_single_data_type_permission (4479262151480683518) -->
+    <skip />
 </resources>
